[gd_scene load_steps=7 format=2]

[ext_resource path="res://game/GameInterface.tscn" type="PackedScene" id=1]
[ext_resource path="res://game/room/RoomFe.tscn" type="PackedScene" id=2]
[ext_resource path="res://environment/closing_door/ClosingDoor.tscn" type="PackedScene" id=3]
[ext_resource path="res://game/testing/sentry_drones/sentry_drone_playground.gd" type="Script" id=4]





[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 240, 90 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 8, 72 )

[node name="SentryDroneDemo" instance=ExtResource( 1 )]

[node name="SentryDronePlayground" parent="World/Rooms" index="0" instance=ExtResource( 2 )]
script = ExtResource( 4 )

[node name="Empty" parent="World/Rooms/SentryDronePlayground/TileMaps" index="0"]
tile_data = PoolIntArray( 65537, 0, 0, 65538, 0, 0, 65539, 0, 0, 65540, 0, 0, 65541, 0, 0, 65542, 0, 0, 65543, 0, 0, 65544, 0, 0, 65548, 0, 0, 65549, 0, 0, 65550, 0, 0, 65551, 0, 0, 65552, 0, 0, 65553, 0, 0, 65554, 0, 0, 65555, 0, 0, 65556, 0, 0, 65557, 0, 0, 65558, 0, 0, 65559, 0, 0, 65560, 0, 0, 65561, 0, 0, 65562, 0, 0, 65563, 0, 0, 131073, 0, 0, 131074, 0, 0, 131075, 0, 0, 131076, 0, 0, 131077, 0, 0, 131078, 0, 0, 131079, 0, 0, 131080, 0, 0, 131087, 0, 0, 131088, 0, 0, 131089, 0, 0, 131090, 0, 0, 131091, 0, 0, 131092, 0, 0, 131093, 0, 0, 131094, 0, 0, 131095, 0, 0, 131096, 0, 0, 131097, 0, 0, 131098, 0, 0, 131099, 0, 0, 196609, 0, 0, 196610, 0, 0, 196611, 0, 0, 196613, 0, 0, 196614, 0, 0, 196615, 0, 0, 196616, 0, 0, 196617, 0, 0, 196619, 0, 0, 196620, 0, 0, 196621, 0, 0, 196622, 0, 0, 196623, 0, 0, 196624, 0, 0, 196625, 0, 0, 196626, 0, 0, 196627, 0, 0, 196628, 0, 0, 196629, 0, 0, 196630, 0, 0, 196631, 0, 0, 196632, 0, 0, 196633, 0, 0, 196634, 0, 0, 196635, 0, 0, 196636, 0, 0, 262145, 0, 0, 262146, 0, 0, 262147, 0, 0, 262148, 0, 0, 262149, 0, 0, 262150, 0, 0, 262151, 0, 0, 262152, 0, 0, 262153, 0, 0, 262155, 0, 0, 262156, 0, 0, 262157, 0, 0, 262158, 0, 0, 262159, 0, 0, 262160, 0, 0, 262161, 0, 0, 262162, 0, 0, 262163, 0, 0, 262164, 0, 0, 262165, 0, 0, 262166, 0, 0, 262167, 0, 0, 262168, 0, 0, 262169, 0, 0, 262170, 0, 0, 262171, 0, 0, 262172, 0, 0, 327681, 0, 0, 327682, 0, 0, 327683, 0, 0, 327684, 0, 0, 327685, 0, 0, 327686, 0, 0, 327687, 0, 0, 327688, 0, 0, 327689, 0, 0, 327691, 0, 0, 327692, 0, 0, 327693, 0, 0, 327694, 0, 0, 327695, 0, 0, 327696, 0, 0, 327697, 0, 0, 327698, 0, 0, 327699, 0, 0, 327700, 0, 0, 327701, 0, 0, 327702, 0, 0, 327703, 0, 0, 327704, 0, 0, 327705, 0, 0, 327706, 0, 0, 327707, 0, 0, 327708, 0, 0, 393217, 0, 0, 393218, 0, 0, 393219, 0, 0, 393220, 0, 0, 393221, 0, 0, 393222, 0, 0, 393223, 0, 0, 393224, 0, 0, 393225, 0, 0, 393227, 0, 0, 393228, 0, 0, 393229, 0, 0, 393230, 0, 0, 393231, 0, 0, 393232, 0, 0, 393233, 0, 0, 393234, 0, 0, 393235, 0, 0, 393236, 0, 0, 393237, 0, 0, 393238, 0, 0, 393239, 0, 0, 393240, 0, 0, 393241, 0, 0, 393242, 0, 0, 393243, 0, 0, 393244, 0, 0, 458753, 0, 0, 458754, 0, 0, 458755, 0, 0, 458756, 0, 0, 458757, 0, 0, 458758, 0, 0, 458759, 0, 0, 458760, 0, 0, 458761, 0, 0, 458763, 0, 0, 458764, 0, 0, 458765, 0, 0, 458766, 0, 0, 458767, 0, 0, 458768, 0, 0, 458769, 0, 0, 458774, 0, 0, 458775, 0, 0, 458776, 0, 0, 458777, 0, 0, 458778, 0, 0, 458779, 0, 0, 458780, 0, 0, 524289, 0, 0, 524290, 0, 0, 524291, 0, 0, 524292, 0, 0, 524293, 0, 0, 524294, 0, 0, 524295, 0, 0, 524296, 0, 0, 524297, 0, 0, 524299, 0, 0, 524300, 0, 0, 524301, 0, 0, 524302, 0, 0, 524303, 0, 0, 524304, 0, 0, 524305, 0, 0, 524306, 0, 0, 524307, 0, 0, 524308, 0, 0, 524309, 0, 0, 524310, 0, 0, 524311, 0, 0, 524312, 0, 0, 524313, 0, 0, 524314, 0, 0, 524315, 0, 0, 589825, 0, 0, 589826, 0, 0, 589827, 0, 0, 589828, 0, 0, 589829, 0, 0, 589830, 0, 0, 589831, 0, 0, 589832, 0, 0, 589833, 0, 0, 589835, 0, 0, 589836, 0, 0, 589837, 0, 0, 589838, 0, 0, 589839, 0, 0, 589840, 0, 0, 589841, 0, 0, 589842, 0, 0, 589843, 0, 0, 589844, 0, 0, 589845, 0, 0, 589846, 0, 0, 589847, 0, 0, 589848, 0, 0, 589849, 0, 0, 589850, 0, 0 )

[node name="BackgroundLarge" parent="World/Rooms/SentryDronePlayground/TileMaps" index="1"]
tile_data = PoolIntArray( 65542, 2, 0, 65543, 2, 0, 131078, 3, 0, 131079, 3, 0 )

[node name="BackgroundSmall" parent="World/Rooms/SentryDronePlayground/TileMaps" index="2"]
tile_data = PoolIntArray( 65538, 65, 0, 65539, 65, 0, 65540, 65, 0, 65542, 89, 0, 65543, 90, 0, 65544, 1, 0, 65559, 87, 0, 65560, 88, 0, 131074, 65, 0, 131075, 65, 0, 131076, 65, 0, 131080, 1, 0, 196610, 65, 0, 196611, 66, 0, 196612, 65, 0, 196616, 2, 0, 262146, 66, 0, 262148, 65, 0, 327684, 66, 0, 589830, 7, 0 )

[node name="Platforms" parent="World/Rooms/SentryDronePlayground/TileMaps" index="3"]
tile_data = PoolIntArray( -1, 28, 0, -65536, 28, 0, -65535, 28, 0, -65534, 28, 0, -65533, 28, 0, -65532, 28, 0, -65531, 28, 0, -65530, 28, 0, -65529, 28, 0, -65528, 28, 0, -65527, 28, 0, -65526, 28, 0, -65525, 28, 0, -65524, 28, 0, -65523, 28, 0, -65522, 28, 0, -65521, 28, 0, -65520, 28, 0, -65519, 28, 0, -65518, 28, 0, -65517, 28, 0, -65516, 28, 0, -65515, 28, 0, -65514, 28, 0, -65513, 28, 0, -65512, 28, 0, -65511, 28, 0, -65510, 28, 0, -65509, 28, 0, -65508, 28, 0, -65507, 28, 0, -65506, 28, 0, 65535, 28, 0, 0, 28, 0, 1, 28, 0, 2, 28, 0, 3, 28, 0, 4, 28, 0, 5, 28, 0, 6, 28, 0, 7, 28, 0, 8, 28, 0, 9, 28, 0, 10, 28, 0, 11, 28, 0, 12, 28, 0, 13, 28, 0, 14, 28, 0, 15, 28, 0, 16, 28, 0, 17, 28, 0, 18, 28, 0, 19, 28, 0, 20, 28, 0, 21, 28, 0, 22, 28, 0, 23, 28, 0, 24, 28, 0, 25, 28, 0, 26, 28, 0, 27, 28, 0, 28, 28, 0, 29, 28, 0, 30, 28, 0, 131071, 28, 0, 65536, 28, 0, 65537, 48, 0, 65541, 48, 0, 65545, 34, 0, 65546, 28, 0, 65547, 33, 0, 65552, 48, 0, 65553, 48, 0, 65554, 48, 0, 65555, 48, 0, 65556, 48, 0, 65557, 48, 0, 65558, 48, 0, 65561, 48, 0, 65562, 48, 0, 65563, 48, 0, 65564, 34, 0, 65565, 28, 0, 65566, 28, 0, 196607, 28, 0, 131072, 28, 0, 131073, 48, 0, 131077, 48, 0, 131078, 48, 0, 131079, 48, 0, 131081, 35, 0, 131082, 28, 0, 131083, 36, 0, 131088, 48, 0, 131089, 48, 0, 131090, 48, 0, 131091, 48, 0, 131092, 48, 0, 131093, 48, 0, 131094, 48, 0, 131095, 48, 0, 131096, 48, 0, 131097, 48, 0, 131098, 48, 0, 131099, 48, 0, 131100, 35, 0, 131101, 28, 0, 131102, 28, 0, 262143, 28, 0, 196608, 28, 0, 196609, 48, 0, 196613, 48, 0, 196614, 48, 0, 196615, 48, 0, 196617, 48, 0, 196618, 28, 0, 196619, 48, 0, 196620, 48, 0, 196621, 48, 0, 196622, 48, 0, 196623, 48, 0, 196624, 48, 0, 196625, 48, 0, 196626, 48, 0, 196627, 48, 0, 196628, 48, 0, 196629, 48, 0, 196630, 48, 0, 196631, 48, 0, 196632, 48, 0, 196633, 48, 0, 196634, 48, 0, 196635, 48, 0, 196636, 48, 0, 196637, 28, 0, 196638, 28, 0, 327679, 28, 0, 262144, 28, 0, 262145, 48, 0, 262147, 48, 0, 262149, 48, 0, 262150, 48, 0, 262151, 48, 0, 262152, 48, 0, 262153, 48, 0, 262154, 28, 0, 262155, 48, 0, 262156, 48, 0, 262157, 48, 0, 262158, 48, 0, 262159, 48, 0, 262160, 48, 0, 262161, 48, 0, 262162, 48, 0, 262163, 48, 0, 262164, 48, 0, 262165, 48, 0, 262166, 48, 0, 262167, 48, 0, 262168, 48, 0, 262169, 48, 0, 262170, 48, 0, 262171, 48, 0, 262172, 48, 0, 262173, 28, 0, 262174, 28, 0, 393215, 28, 0, 327680, 28, 0, 327681, 48, 0, 327682, 48, 0, 327683, 48, 0, 327685, 48, 0, 327686, 48, 0, 327687, 48, 0, 327688, 48, 0, 327689, 48, 0, 327690, 28, 0, 327691, 48, 0, 327692, 48, 0, 327693, 48, 0, 327694, 48, 0, 327695, 48, 0, 327696, 48, 0, 327697, 48, 0, 327698, 48, 0, 327699, 48, 0, 327700, 48, 0, 327701, 48, 0, 327702, 48, 0, 327703, 48, 0, 327704, 48, 0, 327705, 48, 0, 327706, 48, 0, 327707, 48, 0, 327708, 48, 0, 327709, 28, 0, 327710, 28, 0, 458751, 28, 0, 393216, 28, 0, 393217, 48, 0, 393218, 48, 0, 393219, 48, 0, 393220, 48, 0, 393221, 48, 0, 393222, 48, 0, 393223, 48, 0, 393224, 48, 0, 393225, 48, 0, 393226, 28, 0, 393227, 48, 0, 393228, 48, 0, 393229, 48, 0, 393230, 48, 0, 393231, 48, 0, 393232, 48, 0, 393233, 48, 0, 393234, 48, 0, 393235, 48, 0, 393236, 48, 0, 393237, 48, 0, 393238, 48, 0, 393239, 48, 0, 393240, 48, 0, 393241, 48, 0, 393242, 48, 0, 393243, 48, 0, 393244, 48, 0, 393245, 28, 0, 393246, 28, 0, 524287, 28, 0, 458752, 28, 0, 458753, 48, 0, 458754, 48, 0, 458755, 48, 0, 458756, 48, 0, 458757, 48, 0, 458758, 48, 0, 458759, 48, 0, 458760, 48, 0, 458761, 48, 0, 458762, 28, 0, 458763, 48, 0, 458764, 48, 0, 458765, 48, 0, 458766, 48, 0, 458767, 48, 0, 458768, 48, 0, 458769, 48, 0, 458770, 18, 0, 458771, 18, 0, 458772, 18, 0, 458773, 18, 0, 458774, 48, 0, 458775, 48, 0, 458776, 48, 0, 458777, 48, 0, 458778, 48, 0, 458779, 48, 0, 458780, 48, 0, 458781, 28, 0, 458782, 28, 0, 589823, 28, 0, 524288, 28, 0, 524289, 48, 0, 524290, 48, 0, 524291, 48, 0, 524292, 48, 0, 524293, 48, 0, 524294, 48, 0, 524295, 48, 0, 524296, 48, 0, 524297, 48, 0, 524299, 48, 0, 524300, 48, 0, 524301, 48, 0, 524302, 48, 0, 524303, 48, 0, 524304, 48, 0, 524305, 48, 0, 524306, 48, 0, 524307, 48, 0, 524308, 48, 0, 524309, 48, 0, 524310, 48, 0, 524311, 48, 0, 524312, 48, 0, 524313, 48, 0, 524314, 48, 0, 524315, 48, 0, 524316, 23, 0, 524317, 28, 0, 524318, 28, 0, 655359, 28, 0, 589824, 28, 0, 589825, 48, 0, 589826, 48, 0, 589827, 48, 0, 589828, 48, 0, 589829, 48, 0, 589831, 48, 0, 589832, 48, 0, 589833, 48, 0, 589835, 48, 0, 589836, 48, 0, 589837, 48, 0, 589838, 48, 0, 589839, 48, 0, 589840, 48, 0, 589841, 48, 0, 589842, 48, 0, 589843, 48, 0, 589844, 48, 0, 589845, 48, 0, 589846, 48, 0, 589847, 48, 0, 589848, 48, 0, 589849, 48, 0, 589850, 48, 0, 589851, 23, 0, 589852, 23, 0, 589853, 28, 0, 589854, 28, 0, 720895, 28, 0, 655360, 28, 0, 655361, 28, 0, 655362, 28, 0, 655363, 28, 0, 655364, 28, 0, 655365, 28, 0, 655366, 28, 0, 655367, 28, 0, 655368, 28, 0, 655369, 28, 0, 655370, 28, 0, 655371, 28, 0, 655372, 28, 0, 655373, 28, 0, 655374, 28, 0, 655375, 28, 0, 655376, 28, 0, 655377, 28, 0, 655378, 28, 0, 655379, 28, 0, 655380, 28, 0, 655381, 28, 0, 655382, 28, 0, 655383, 28, 0, 655384, 28, 0, 655385, 28, 0, 655386, 28, 0, 655387, 28, 0, 655388, 28, 0, 655389, 28, 0, 655390, 28, 0, 786431, 28, 0, 720896, 28, 0, 720897, 28, 0, 720898, 28, 0, 720899, 28, 0, 720900, 28, 0, 720901, 28, 0, 720902, 28, 0, 720903, 28, 0, 720904, 28, 0, 720905, 28, 0, 720906, 28, 0, 720907, 28, 0, 720908, 28, 0, 720909, 28, 0, 720910, 28, 0, 720911, 28, 0, 720912, 28, 0, 720913, 28, 0, 720914, 28, 0, 720915, 28, 0, 720916, 28, 0, 720917, 28, 0, 720918, 28, 0, 720919, 28, 0, 720920, 28, 0, 720921, 28, 0, 720922, 28, 0, 720923, 28, 0, 720924, 28, 0, 720925, 28, 0, 720926, 28, 0 )

[node name="RoomBoundaries" parent="World/Rooms/SentryDronePlayground" index="1"]
visible = false

[node name="CollisionShape2D" parent="World/Rooms/SentryDronePlayground/RoomBoundaries" index="0"]
position = Vector2( 240, 90 )
shape = SubResource( 1 )

[node name="Left" type="Position2D" parent="World/Rooms/SentryDronePlayground/CameraAnchors" index="0"]
position = Vector2( 160, 90 )

[node name="Right" type="Position2D" parent="World/Rooms/SentryDronePlayground/CameraAnchors" index="1"]
position = Vector2( 320, 90 )

[node name="ClosingDoorManager" type="Node2D" parent="World/Rooms/SentryDronePlayground" index="9"]

[node name="ClosingDoor" parent="World/Rooms/SentryDronePlayground/ClosingDoorManager" index="0" instance=ExtResource( 3 )]
position = Vector2( 168, 144 )

[node name="ClosingDoorTrigger" type="Area2D" parent="World/Rooms/SentryDronePlayground/ClosingDoorManager" index="1"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="World/Rooms/SentryDronePlayground/ClosingDoorManager/ClosingDoorTrigger" index="0"]
position = Vector2( 344, 88 )
shape = SubResource( 2 )

[node name="Player" parent="World" index="3"]
position = Vector2( 50, 160 )

[editable path="World/Rooms/SentryDronePlayground"]

[editable path="World/Rooms/SentryDronePlayground/TileMaps"]
